Updated README file and removed some unused files